--- a/style.css
+++ b/style.css
@@ -11,11 +11,12 @@ body{
   justify-content: center;
   min-height: 100vh;
   /* overflow: hidden; */
-  background: -webkit-linear-gradient(bottom, #ff9900, #00cc00);
+  background: -webkit-linear-gradient(bottom, #0b344d, #042031);
 }
 ::selection{
   color: #fff;
-  background: #00cc00;
+  background: #0b344d;
+  
 }
 .container{
   width: 700px;
@@ -32,10 +33,12 @@ body{
   font-size: 35px;
   font-weight: 600;
   margin: 0 0 30px 0;
+  
 }
 .container .form-outer{
   width: 100%;
   overflow: hidden;
+  margin-left: 115px;
 }
 .container .form-outer form{
   display: flex;
@@ -49,13 +52,15 @@ body{
   text-align: left;
   font-size: 25px;
   font-weight: 500;
+  width: 500px;
 }
 .form-outer form .page .field{
-  width: 450px;
+  width: 480px;
   height: 45px;
   margin: 45px 0;
   display: flex;
   position: relative;
+  margin-right: 300px;
 }
 form .page .field .label{
   position: absolute;
@@ -80,7 +85,7 @@ form .page .field button{
   width: 100%;
   height: calc(100% + 5px);
   border: none;
-  background: #00cc00;
+  background: #2ea4d3;
   margin-top: -20px;
   border-radius: 5px;
   color: #fff;
@@ -92,7 +97,7 @@ form .page .field button{
   transition: 0.5s ease;
 }
 form .page .field button:hover{
-  background: #000;
+  background: #0b344d;
 }
 form .page .btns button{
   margin-top: -20px!important;
@@ -108,10 +113,12 @@ form .page .btns button.next{
   display: flex;
   margin: 40px 0;
   user-select: none;
+  justify-content: center;
+  align-items: center;
 }
 .container .progress-bar .step{
   text-align: center;
-  width: 100%;
+  width: 110px;
   position: relative;
 }
 .container .progress-bar .step p{
@@ -149,9 +156,9 @@ form .page .btns button.next{
   position: absolute;
   content: '';
   bottom: 11px;
-  right: -51px;
+  right: -78px;
   height: 3px;
-  width: 44px;
+  width: 70px;
   background: #262626;
 }
 .progress-bar .step .bullet.active:after{
@@ -184,4 +191,21 @@ form .page .btns button.next{
 .progress-bar .step .check.active{
   display: block;
   color: #fff;
+}
+
+.radio{
+  display: flex;
+  align-items: left;
+  height: 20px !important;
+  width: 20px !important;
+}
+
+.radiotext{
+  margin-left: 15px;
+  margin-bottom: 20px;
+}
+
+.textarea{
+  height: 300px;
+  resize: none;
 }
