--- a/style.css
+++ b/style.css
@@ -15,10 +15,10 @@
   }
 
   .container .form-outer{
-    margin-left: 15px!important;
+    margin-left: 8px!important;
   }
   .form-outer form .page .field{
-    width: 330px!important;
+    width: 348px!important;
   }
   .form-outer form .page .title{
     font-size: 20px!important;
@@ -26,14 +26,28 @@
   }
   .progress-bar .step .bullet:before,
   .progress-bar .step .bullet:after{
-  right: -41px!important;
-  width: 35px!important;
+  right: -36px!important;
+  width: 30px!important;
   }
   form .page .field .label{
     width: 370px!important;
     text-align: left!important;
   }
-  
+
+  .form-outer form .page .inputCampo{
+    width: 330px!important;
+  }
+
+  form .page .field .inputCampo{
+    width: 370px!important;
+    text-align: left!important;
+  }
+  .botao{
+    width: 348px!important;
+  }
+  .textarea{
+    width: 348px!important;
+  }
 }
 
 *{
@@ -91,7 +105,7 @@ body{
   width: 500px;
 }
 .form-outer form .page .field{
-  width: 480px;
+  width: 496px;
   height: 45px;
   margin: 45px 0;
   display: flex;
@@ -99,9 +113,10 @@ body{
   margin-right: 300px;
 }
 form .page .field .label{
-  position: absolute;
+  position: static;
   top: -30px;
   font-weight: 500;
+  width: 360px;
 }
 form .page .field input{
   height: 100%;
@@ -111,6 +126,67 @@ form .page .field input{
   padding-left: 15px;
   font-size: 18px;
 }
+
+/* Nova classe aqui --------------------------------------------------*/
+.form-outer form .page .inputCampo{
+  width: 480px;
+  height: 45px;
+  margin: 45px 0;
+  position: static;
+  margin-right: 300px;
+}
+
+form .page .inputCampo .label{
+ 
+  font-weight: 500;
+  width: 360px;
+  text-align: left;
+  margin-top: 5px;
+}
+
+form .page .inputCampo input{
+  height: 100%;
+  width: 100%;
+  border: 1px solid lightgrey;
+  border-radius: 5px;
+  padding-left: 15px;
+  font-size: 18px;
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+.botao{
+  display: flex;
+  width: 496px;
+}
+.botao button{
+  margin-top: 300px;
+  width: 100%;
+  height: 50px;
+  border: none;
+  background: #2ea4d3;
+  margin-top: 25px;
+  border-radius: 5px;
+  color: #fff;
+  cursor: pointer;
+  font-size: 18px;
+  font-weight: 500;
+  letter-spacing: 1px;
+  text-transform: uppercase;
+  transition: 0.5s ease;
+  
+}
+
+.botao button.prev{
+  margin-right: 5px;
+}
+#label3{
+  margin-top: 70px;
+}
+
+
+
+/* ------------------------------------------------------------------------ */
+
 form .page .field select{
   width: 100%;
   padding-left: 10px;
@@ -122,7 +198,7 @@ form .page .field button{
   height: calc(100% + 5px);
   border: none;
   background: #2ea4d3;
-  margin-top: -20px;
+  margin-top: 25px;
   border-radius: 5px;
   color: #fff;
   cursor: pointer;
@@ -243,5 +319,6 @@ form .page .btns button.next{
 
 .textarea{
   height: 300px;
+  width: 496px;
   resize: none;
 }
